# trajectory_server

./: CMakeLists.txt  README.md  package.xml
include/rpoly/: rpoly_ak1.hpp
include/trajectory_server/: poly_lib.hpp  trajectory_server.hpp
include/trajectory_server_v2/: trajectory_server.hpp
launch/: trajectory_server.launch
msg/: Waypoint.msg
src/: poly_lib.cpp  trajectory_server.cpp  trajectory_server_node.cpp  trajectory_test_node.cpp
src/rpoly/: rpoly_ak1.cpp
srv/: PlanPolyTraj.srv
