<?xml version="1.0"?>
<package format="2">
  <name>trajectory_server_v2</name>
  <version>1.0.0</version>
  <description>The trajectory_server_v2 package</description>
  <maintainer email="lorenzo.gentilini4@unibo.it">Lorenzo Gentilini</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>poly_lib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nlopt</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>poly_lib</build_export_depend>
  <build_export_depend>nlopt</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>poly_lib</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nlopt</exec_depend>

  <export>
  </export>
</package>
